CLINVIO-DOCTOR-PORTAL-23136 'Renaming classes, properties added, enviroment implementation'
