# master/clinvio-doctor-portal-service/src/main/java/com/doctor/portal/mapper/ProfileEntityMapper.java
@@ -2,16 +2,16 @@ package com.doctor.portal.mapper;
 
 import org.mapstruct.Mapper;
 
-import com.doctor.portal.entities.DoctorProfileEntity;
 import com.doctor.portal.entities.PAProfileEntity;
-import com.doctor.portal.model.DoctorProfileRequestModel;
+import com.doctor.portal.entities.ProfileEntity;
 import com.doctor.portal.model.PAProfileRequestModel;
+import com.doctor.portal.model.ProfileRequestModel;
 
 @Mapper(componentModel = "spring")
-public interface DoctorProfileEntityMapper {
+public interface ProfileEntityMapper {
 
-	DoctorProfileEntity doctorProfileRequestModelToDoctorProfileEntity(
-			DoctorProfileRequestModel doctorProfileRequestModel);
+	ProfileEntity doctorProfileRequestModelToDoctorProfileEntity(
+			ProfileRequestModel doctorProfileRequestModel);
 
 	PAProfileEntity paProfileRequestModelToPAProfileEntity(PAProfileRequestModel paProfileRequestModel);
 }
